[gd_scene load_steps=7 format=2]

[ext_resource path="res://Rooms/document/okienko 3.png" type="Texture" id=1]
[ext_resource path="res://Rooms/document/okienko3.gd" type="Script" id=2]
[ext_resource path="res://Riddles/doc_code/1.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "okienko",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 62.8973

[sub_resource type="Animation" id=3]
resource_name = "wejscie"
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 6.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.9, 1.3, 2.9, 5, 6.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 19.4044, -17.724 ), Vector2( 16.9697, -42.8206 ), Vector2( 16.9697, -42.8206 ), Vector2( 17.3443, -36.8274 ), Vector2( 18.0934, -42.0715 ), Vector2( 18.6553, -37.5766 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 84.9239, 47.7093, 3.43176 ]
}

[node name="Node2D" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
animation = "okienko"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -21.3834, -10.4858, -21.3834, 1.81654, -5.90622, 10.5472, 32.1914, -8.50156, 31.7945, -13.6606, 15.5237, -21.9945, 15.5237, -28.7409, -22.5739, -22.3913 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
visible = false
polygon = PoolVector2Array( -22.1771, 0.625992, -6.30307, 10.5472, 31.9629, -8.29942, 32.1857, -13.8675, 15.704, -22.1084, 15.0359, -46.8308, -21.7137, -29.4583 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 2.38379, -15.6271 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/wejscie = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.709804 )
position = Vector2( 22.421, -40.8125 )
rotation = 0.0598955
scale = Vector2( 0.548803, 0.531913 )
texture = ExtResource( 3 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
